# docs/api.yaml
@@ -238,7 +238,7 @@ paths:
         - Users
       summary: Update user quest history
       operationId: updateUserQuestHistory
-      security: [ BearerAuth: []]
+      security: [ BearerAuth: [ ] ]
       requestBody:
         content:
           application/json:
@@ -267,7 +267,7 @@ paths:
       tags:
         - Quests
       summary: Get current task to complete
-      security: [ BearerAuth: []]
+      security: [ BearerAuth: [ ] ]
       parameters:
         - in: query
           name: actualLevel
@@ -293,7 +293,7 @@ paths:
       tags:
         - Users
       summary: Get list of quest done or not by the user
-      security: [ BearerAuth: []]
+      security: [ BearerAuth: [ ] ]
       parameters:
         - in: path
           name: userId
@@ -316,7 +316,55 @@ paths:
           $ref: "#/components/responses/403"
         500:
           $ref: "#/components/responses/500"
-
+  '/security_questions':
+    get:
+      tags:
+        - Security
+      summary: get a list of all security questions
+      security: [ ]
+      responses:
+        200:
+          description: List of quests done or not by the current user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/SecurityQuestion"
+        500:
+          $ref: "#/components/responses/500"
+  '/reset_password':
+    post:
+      tags:
+        - Security
+      summary: reset password
+      description: resets your password given your username and a secret
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                question:
+                  type: string
+                answer:
+                  type: string
+      responses:
+        200:
+          description: a reset_token valid for 1 hour
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  reset_token:
+                    type: string
+        403:
+          $ref: '#/components/responses/403'
+        500:
+          $ref: '#/components/responses/500'
 components:
   securitySchemes:
     BearerAuth:
@@ -354,6 +402,13 @@ components:
           schema:
             $ref: '#/components/schemas/InternalServerException'
   schemas:
+    SecurityQuestion:
+      type: object
+      properties:
+        id:
+          type: string
+        question:
+          type: string
     Quest:
       type: object
       properties:
@@ -484,6 +539,10 @@ components:
         birthDate:
           type: string
           format: date
+        security_question_id:
+          type: string
+        security_question_answer:
+          type: string
     CreatedUser:
       type: object
       properties:
