# src/main/java/app/cashquest/api/endpoint/rest/controller/mapper/SecurityQuestionMapper.java
@@ -1,0 +1,13 @@
+package app.cashquest.api.endpoint.rest.controller.mapper;
+
+import app.cashquest.api.endpoint.rest.model.SecurityQuestion;
+import org.springframework.stereotype.Component;
+
+@Component
+public class SecurityQuestionMapper {
+    public SecurityQuestion toRest(app.cashquest.api.repository.model.SecurityQuestion domain){
+        return new SecurityQuestion()
+                .id(domain.getId())
+                .question(domain.getQuestion());
+    }
+}
