# src/main/java/app/cashquest/api/endpoint/rest/security/SecurityConf.java
@@ -75,7 +75,8 @@ public class SecurityConf {
                     new OrRequestMatcher(
                         new AntPathRequestMatcher("/ping", GET.toString()),
                         new AntPathRequestMatcher("/token", POST.toString()),
-                        new AntPathRequestMatcher("/user", POST.toString())))),
+                        new AntPathRequestMatcher("/user", POST.toString()),
+                        new AntPathRequestMatcher("/security_questions", GET.toString())))),
             AnonymousAuthenticationFilter.class)
         .authorizeHttpRequests(
             (authorize) ->
@@ -85,6 +86,8 @@ public class SecurityConf {
                     .requestMatchers("/whoami")
                     .authenticated()
                     .requestMatchers("/token")
+                    .permitAll()
+                    .requestMatchers(GET, "/security_questions")
                     .permitAll()
                     .requestMatchers(POST, "/user")
                     .permitAll()
